// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioItem Соответствует snapshot view="checkbox", active 1`] = `
<div
  className="CartForm-RadioItem"
>
  <input
    checked={true}
    className="CartForm-RadioButton"
    id="value-name"
    name="name"
    readOnly={true}
    type="radio"
    value="value"
  />
  <label
    htmlFor="value-name"
    onClick={[Function]}
  >
    <div
      className="CartForm-RadioLabelWrap"
    >
      <div
        className="CartForm-RadioLabelCheck CartForm-RadioLabelCheck_active"
        dangerouslySetInnerHTML={
          Object {
            "__html": "check.svg",
          }
        }
      />
      <span
        className="CartForm-RadioLabelInner"
      >
        <span
          className="CartForm-CheckboxTitle"
        >
          label
        </span>
      </span>
    </div>
  </label>
</div>
`;

exports[`RadioItem Соответствует snapshot view="circle", not active 1`] = `
<div
  className="CartForm-RadioItem"
>
  <input
    checked={false}
    className="CartForm-RadioButton"
    id="value-name"
    name="name"
    readOnly={true}
    type="radio"
    value="value"
  />
  <label
    htmlFor="value-name"
    onClick={[Function]}
  >
    <div
      className="CartForm-RadioLabelWrap"
    >
      <div
        className="CartForm-RadioLabelCheck"
        dangerouslySetInnerHTML={
          Object {
            "__html": "circle.svgcircle.svg",
          }
        }
      />
      <span
        className="CartForm-RadioLabelInner"
      >
        <span
          className="CartForm-CheckboxTitle"
        >
          label
        </span>
      </span>
    </div>
  </label>
</div>
`;

exports[`RadioItem Соответствует snapshot Расположение блоков из renderProps 1`] = `
<div
  className="CartForm-RadioItem"
>
  <input
    checked={false}
    className="CartForm-RadioButton"
    id="value-name"
    name="name"
    readOnly={true}
    type="radio"
    value="value"
  />
  <label
    htmlFor="value-name"
    onClick={[Function]}
  >
    <div
      className="CartForm-RadioLabelWrap"
    >
      <div
        className="CartForm-RadioLabelCheck"
        dangerouslySetInnerHTML={
          Object {
            "__html": "check_unchecked.svg",
          }
        }
      />
      <span
        className="CartForm-RadioLabelInner"
      >
        <span
          className="CartForm-CheckboxTitle"
        >
          label
        </span>
      </span>
    </div>
    <div
      className="CartForm-RadioLabelAfter"
    >
      renderAfter
    </div>
  </label>
</div>
`;
